--- a/README.Rmd
+++ b/README.Rmd
@@ -22,66 +22,24 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/validmeasures/oldr/branch/master/graph/badge.svg)](https://codecov.io/gh/validmeasures/oldr)
 
 
-[HelpAge International](http://www.helpage.org), [VALID International](http://www.validinternational.org), 
-and [Brixton Health](http://www.brixtonhealth.com), with financial assistance from 
-the [Humanitarian Innovation Fund (HIF)](http://www.elrha.org/hif/home/), have 
-developed a **Rapid Assessment Method for Older People (RAM-OP)** that provides 
-accurate and reliable estimates of the needs of older people. The method uses 
-simple procedures, in a short time frame (i.e. about two weeks including training, 
-data collection, data entry, and data analysis), and at considerably lower cost 
-than other methods. The **RAM-OP** method is based on the following principles:
+[HelpAge International](http://www.helpage.org), [VALID International](http://www.validinternational.org), and [Brixton Health](http://www.brixtonhealth.com), with financial assistance from the [Humanitarian Innovation Fund (HIF)](http://www.elrha.org/hif/home/), have developed a **Rapid Assessment Method for Older People (RAM-OP)** that provides accurate and reliable estimates of the needs of older people. The method uses simple procedures, in a short time frame (i.e. about two weeks including training, data collection, data entry, and data analysis), and at considerably lower cost than other methods. The **RAM-OP** method is based on the following principles:
 
-* Use of a familiar *“household survey”* design employing a two-stage cluster 
-sample design optimised to allow the use of a small primary sample (*m ≥ 16 clusters*) 
-and a small overall (*n ≥ 192*) sample.
+* Use of a familiar *“household survey”* design employing a two-stage cluster sample design optimised to allow the use of a small primary sample (*m ≥ 16 clusters*) and a small overall (*n ≥ 192*) sample.
 
-* Assessment of multiple dimensions of need in older people (including prevalence 
-of global, moderate and severe acute malnutrition) using, whenever possible, standard 
-and well-tested indicators and question sets.
+* Assessment of multiple dimensions of need in older people (including prevalence of global, moderate and severe acute malnutrition) using, whenever possible, standard and well-tested indicators and question sets.
 
-* Data analysis performed using modern computer-intensive methods to allow estimates 
-of indicator levels to be made with useful precision using a small sample size.
+* Data analysis performed using modern computer-intensive methods to allow estimates of indicator levels to be made with useful precision using a small sample size.
 
 
-## Getting started
+## Installing
 
-The following tools are currently available under the General Public Licence / Free Documentation License 
-(see [LICENSE](https://github.com/validmeasures/oldr/blob/master/LICENSE)), meaning 
-that you are free to copy and adapt these tools:
+This package is currently in active development in preparation for submission to the CRAN repository. The development version of `oldr` can be installed in `R` via the following commands:
 
-* an English language manual / guidebook
-* a questionnaire (available in English and French)
-* data entry and data checking software (available in English and French)
-* data analysis software
-
-### Installing
-
-This package is currently in active development in preparation for submission to
-the CRAN repository. The development version of `oldr` can be installed in R
-via the following commands:
-
-```R
-# Install devtools
+```{r, eval = FALSE}
 # install.packages("devtools")
-devtools::install_github("validmeaures/oldr")
+devtools::install_github("rapidsurveys/oldr")
 ```
 
-## Built with
+## Usage
 
-* [EpiData](http://www.epidata.dk) for data entry of *pen and paper interviews (PAPI)*
-* [Open Data Kit](https://opendatakit.org) for data collection using electronic mobile devices
-* [R](https://www.r-project.org) and [RAnalyticFlow](http://r.analyticflow.com) for data analysis 
-
-
-## Authors
-
-* Pascale Fritsch
-* Ernest Guevarra
-* Katja Siling
-* Mark Myatt
-
-
-## License
-
-This project is licensed under the GNU Affero General Public License v3.0 - see the [LICENSE](https://github.com/validemeasures/oldr/blob/master/LICENSE) file for details
-
+This package contains functions that support in the data processing, analysis and visualisation of RAM-OP survey datasets collected using the standard RAM-OP survey questionnaire. For a more detailed description of the RAM-OP survey, read the [RAM-OP manual](https://ram.validmeasures.org/ramOPmanual).
