--- a/README.Rmd
+++ b/README.Rmd
@@ -18,9 +18,9 @@ knitr::opts_chunk$set(
 [![CRAN](https://img.shields.io/cran/v/oldr.svg)](https://cran.r-project.org/package=oldr)
 [![CRAN](https://img.shields.io/cran/l/oldr.svg)](https://CRAN.R-project.org/package=oldr)
 [![CRAN](http://cranlogs.r-pkg.org/badges/oldr)](https://CRAN.R-project.org/package=oldr)
-[![Travis](https://img.shields.io/travis/validmeasures/oldr.svg?branch=master)](https://travis-ci.org/validmeasures/oldr)
-[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/validmeasures/oldr?branch=master&svg=true)](https://ci.appveyor.com/project/validmeasures/oldr)
-[![codecov](https://codecov.io/gh/validmeasures/oldr/branch/master/graph/badge.svg)](https://codecov.io/gh/validmeasures/oldr)
+[![Travis](https://img.shields.io/travis/rapidsurveys/oldr.svg?branch=master)](https://travis-ci.org/rapidsurveys/oldr)
+[![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/rapidsurveys/oldr?branch=master&svg=true)](https://ci.appveyor.com/project/rapidsurveys/oldr)
+[![codecov](https://codecov.io/gh/rapidsurveys/oldr/branch/master/graph/badge.svg)](https://codecov.io/gh/rapidsurveys/oldr)
 
 
 [HelpAge International](http://www.helpage.org), [VALID International](http://www.validinternational.org), and [Brixton Health](http://www.brixtonhealth.com), with financial assistance from the [Humanitarian Innovation Fund (HIF)](http://www.elrha.org/hif/home/), have developed a **Rapid Assessment Method for Older People (RAM-OP)** that provides accurate and reliable estimates of the needs of older people. The method uses simple procedures, in a short time frame (i.e. about two weeks including training, data collection, data entry, and data analysis), and at considerably lower cost than other methods. The **RAM-OP** method is based on the following principles:
