--- a/README.Rmd
+++ b/README.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# oldr: An Implementation of the Rapid Assessment Method for Older People (RAM-OP) in R <img src="man/figures/op_neg.png" align="right" />
+# oldr: An Implementation of the Rapid Assessment Method for Older People (RAM-OP) in R <img src="man/figures/oldr.png" width="150" align="right" />
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
 [![lifecycle](https://img.shields.io/badge/lifecycle-maturing-blue.svg)](https://www.tidyverse.org/lifecycle/#maturing)
 [![CRAN](https://img.shields.io/cran/v/oldr.svg)](https://cran.r-project.org/package=oldr)
