--- a/README.Rmd
+++ b/README.Rmd
@@ -26,6 +26,7 @@ knitr::opts_chunk$set(
 [![Travis](https://img.shields.io/travis/rapidsurveys/oldr.svg?branch=master)](https://travis-ci.org/rapidsurveys/oldr)
 [![AppVeyor Build Status](https://ci.appveyor.com/api/projects/status/github/rapidsurveys/oldr?branch=master&svg=true)](https://ci.appveyor.com/project/rapidsurveys/oldr)
 [![codecov](https://codecov.io/gh/rapidsurveys/oldr/branch/master/graph/badge.svg)](https://codecov.io/gh/rapidsurveys/oldr)
+[![CodeFactor](https://www.codefactor.io/repository/github/rapidsurveys/oldr/badge)](https://www.codefactor.io/repository/github/rapidsurveys/oldr)
 <!-- Badges end here-->
 
 
@@ -40,7 +41,13 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-This package is currently in active development in preparation for submission to the CRAN repository. The development version of `oldr` can be installed in `R` via the following commands:
+You can install `oldr` from [CRAN](http://cran.r-project.org) with:
+
+```{r install-cran, echo = TRUE, eval = FALSE}
+install.packages("oldr")
+```
+
+You can install the development version of `oldr` from [GitHub](https://github.com/rapidsurveys/oldr) with:
 
 ```{r install, eval = FALSE}
 if(!require(remotes)) install.packages("remotes")
