--- a/vignettes/ramOPworkflow.Rmd
+++ b/vignettes/ramOPworkflow.Rmd
@@ -27,7 +27,7 @@ library(magrittr)
 
 The RAM-OP Workflow is summarised in the diagram below.
 
-```{r ramOPworkflow, echo = FALSE, eval = TRUE, fig.width = 8, fig.height = 10, fig.align = "center"}
+```{r ramOPworkflow, echo = FALSE, eval = FALSE, fig.width = 8, fig.height = 10, fig.align = "center"}
 DiagrammeR::grViz("
   digraph oxcovid19 {
 
@@ -133,11 +133,14 @@ DiagrammeR::grViz("
 )
 ```
 
+```{r workflow, echo = FALSE, eval = TRUE, fig.align = "center", out.width = "85%"}
+knitr::include_graphics(path = "../man/figures/ramOPworkflow.png")
+```
+
 The `oldr` package provides functions to use for all steps after data collection. These functions were developed specifically for the data structure created by the [EpiData](https://www.dropbox.com/s/2kudlxjqcqn8wph/RAMOP%20data%20entry%20files%20%28English%29.zip?dl=0) or the [Open Data Kit](https://ona.io/helpage/75817/368135/form.xls) collection tools. The data structure produced by these collection tools is shown by the dataset `testSVY` included in the `oldr` package.
 
 ```{r data, echo = TRUE, eval = TRUE}
-## Showing first 10 rows of the dataset
-head(testSVY, 10)
+testSVY
 ```
 
 ## Processing and recoding data
@@ -355,6 +358,32 @@ and will look somethink like this:
 
 ```{r showTable, echo = FALSE, eval = TRUE}
 read.csv(file = paste(tempdir(), "TEST.report.csv", sep = "/"),
+         stringsAsFactors = FALSE)
+```
+
+## The RAM-OP workflow in R using pipe operators
+
+The package `magrittr` provides functions that faciliate piped operations in R. The `oldr` package functions were designed in such a way that they can be used piped to each other to provide the desired output.
+
+### Piped operation to get output estimates table
+
+```{r estimatePipe1, echo = TRUE, eval = TRUE}
+testSVY %>%
+  create_op_all() %>%
+  estimate_op_all(w = testPSU, replicates = 9) %>%
+  report_op_table(FILENAME = paste(tempdir(), "TEST", sep = "/"))
+```
+
+This results in a CSV file `TEST.report.csv` in the temporary directory
+
+```{r estimatePipe2, echo = TRUE, eval = TRUE}
+file.exists(paste(tempdir(), "TEST.report.csv", sep = "/"))
+```
+
+with the following structure:
+
+```{r estimatePipe3, echo = FALSE, eval = TRUE}
+read.csv(file = paste(tempdir(), "TEST.report.csv", sep = "/"), 
          stringsAsFactors = FALSE)
 ```
 
