--- a/README.Rmd
+++ b/README.Rmd
@@ -152,10 +152,10 @@ DiagrammeR::grViz("
     [3]: 'EpiData\\nor\\nOpen Data Kit'
     [4]: 'Process\\nand\\nrecode\\ndata'
     [5]: 'create_op_\\nfunctions'
-    [6]: 'estimateClassic'
+    [6]: 'estimate_classic'
     [7]: 'Estimate\\nindicators'
     [8]: 'Estimate\\nanthropometric\\nindicators'
-    [9]: 'estimateProbit'
+    [9]: 'estimate_probit'
     [10]: 'Visualise\\nestimates'
     [11]: 'chart\\nfunctions'
     [12]: 'Report\\nestimates'
