--- a/vignettes/ramOPworkflow.Rmd
+++ b/vignettes/ramOPworkflow.Rmd
@@ -332,7 +332,9 @@ list.files(path = tempdir())
 and will look somethink like this:
 
 ```{r showChart, echo = FALSE, eval = TRUE, out.width = "85%", fig.align = "center"}
-knitr::include_graphics(path = "../man/figures/test.ADL.png")
+#knitr::include_graphics(path = "../man/figures/test.ADL.png")
+chart_adl(x = create_op_all(testSVY), 
+          save.chart = FALSE)
 ```
 
 ## Reporting estimates
