--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ knitr::opts_chunk$set(
 
 ## Installation
 
-You can install `oldr` from [CRAN](http://cran.r-project.org) with:
+You can install `oldr` from [CRAN](https://cran.r-project.org) with:
 
 ```{r install-cran, echo = TRUE, eval = FALSE}
 install.packages("oldr")
