--- a/vignettes/ramOPworkflow.Rmd
+++ b/vignettes/ramOPworkflow.Rmd
@@ -334,7 +334,7 @@ and will look something like this:
 ```{r showChart, echo = FALSE, eval = TRUE, out.width = "85%", fig.align = "center"}
 #knitr::include_graphics(path = "../man/figures/test.ADL.png")
 chart_adl(x = create_op_all(testSVY), 
-          save.chart = FALSE)
+          save_chart = FALSE)
 ```
 
 ## Reporting estimates
