--- a/README.Rmd
+++ b/README.Rmd
@@ -15,7 +15,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# oldr: An Implementation of the Rapid Assessment Method for Older People (RAM-OP) in R <img src="man/figures/oldr.png" width="200" align="right" />
+# oldr: An Implementation of the Rapid Assessment Method for Older People (RAM-OP) <img src="man/figures/oldr.png" width="200" align="right" />
 
 <!-- Badges start here-->
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](http://www.repostatus.org/badges/latest/active.svg)](http://www.repostatus.org/#active)
